add more changes to style and readme file

--- a/breakfast.html
+++ b/breakfast.html
@@ -106,7 +106,7 @@
 
             <div class="recipes-list-item">
                 <div class="flexleft">
-                    <h3>OATMEAL/h3>
+                    <h3>OATMEAL</h3>
                     <p>Total calories: 300-500 calories.</p>
                     <p>Ingredients: oats, seeds and fruits of your choice.</p>
                     <p>
