add display none for the main video on mobile screen temporarly, until ios issue is solved

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <div id="main-video">
                     <video autoplay muted loop>
                         <source src="assets/images/main-video.mp4" type="video/mp4" />
+                        <source src="assets/images/main-video.webm" type='video/webm' />
                     </video>
                 </div>
 
