add geohedge script

--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <script>
+            window.grumi = {       
+                key: '27f9735f-d1be-4f90-b315-fa89a5afd97e'
+            };
+        </script>
+        <script src="//rumcdn.geoedge.be/27f9735f-d1be-4f90-b315-fa89a5afd97e/grumi-ip.js" async></script>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
